--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
-Django==3.0.8
-pytest==5.4.3
-factory-boy==2.12.0
-
+amqp==2.6.1
 asgiref==3.2.10
 attrs==19.3.0
+billiard==3.6.3.0
+click==7.1.2
+Django==3.0.8
+django-rest-framework==0.1.0
+django-rq==2.3.2
+djangorestframework==3.11.1
+factory-boy==2.12.0
 Faker==4.1.1
+kombu==4.6.11
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
 pyparsing==2.4.7
+pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
 text-unidecode==1.3
+vine==1.3.0
 wcwidth==0.2.5
